# fedsafe

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
man/: Makefile.am  fedsafe-box.1.in  fedsafe-dboxed.1.in  fedsafe-sboxed.1.in  fedsafe-setup.1.in  fedsafe.1  fedsafe.1.in  fedsafe.box.1.in  fedsafe.dboxed.1.in  fedsafe.sboxed.1.in
man/de/: fedsafe-box.1.in  fedsafe-dboxed.1.in  fedsafe-sboxed.1.in  fedsafe-setup.1.in  fedsafe.1.in
po/: Makevars  POTFILES.in  de.po  en.po  fedsafe.pot
src/: Makefile.am  box.in.sh  dboxed.in.sh  gettext.in.sh  help.in.sh  main.in.sh  sbox.in.sh  sboxed.in.sh  setup.in.sh  util.in.sh
src/applications/: fedsafe-dboxed-evince.desktop  fedsafe-dboxed-firefox.desktop  fedsafe-dboxed-libreoffice-calc.desktop  fedsafe-dboxed-libreoffice-impress.desktop  fedsafe-dboxed-libreoffice-writer.desktop  fedsafe-dboxed-xterm.desktop  fedsafe-sboxed-firefox.desktop  fedsafe-sboxed-hexchat.desktop  fedsafe-sboxed-telegram.desktop  fedsafe-sboxed-thunderbird.desktop  fedsafe-sboxed-transmission.desktop
